--- a/urna_eletronica.html
+++ b/urna_eletronica.html
@@ -1,3 +1,7 @@
+<?php
+// Inclui as funções do banco de dados e conexão (db_config.php)
+include 'db_config.php'; 
+?>
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -1152,4 +1156,5 @@
         
     </script>
 </body>
+
 </html>
